objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Location_Interested__c</fullName>
        <inlineHelpText>This field is used to manage Waitlist for Marketing use.</inlineHelpText>
        <label>Location Interested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>32 Village</fullName>
                </value>
                <value>
                    <fullName>AMS-Strawinskylaan</fullName>
                </value>
                <value>
                    <fullName>ARC-Andres Arguibel 2860</fullName>
                </value>
                <value>
                    <fullName>ARC-Avenida Corrientes 800</fullName>
                </value>
                <value>
                    <fullName>ARC-Libertador 1000</fullName>
                </value>
                <value>
                    <fullName>ARC-Torre Bellini</fullName>
                </value>
                <value>
                    <fullName>ARN-Urban Escape</fullName>
                </value>
                <value>
                    <fullName>ATL-1372 Peachtree</fullName>
                </value>
                <value>
                    <fullName>ATL-3280 Peachtree Road NE</fullName>
                </value>
                <value>
                    <fullName>ATL-Tower Place</fullName>
                </value>
                <value>
                    <fullName>AUS-Westview</fullName>
                </value>
                <value>
                    <fullName>AUS-WeWork 801 Barton Springs</fullName>
                </value>
                <value>
                    <fullName>BCN-Diagonal 444</fullName>
                </value>
                <value>
                    <fullName>BHZ-Boulevard Shopping</fullName>
                </value>
                <value>
                    <fullName>BKK-Asia Centre</fullName>
                </value>
                <value>
                    <fullName>BKK-T-One Building</fullName>
                </value>
                <value>
                    <fullName>BKN-109 S 5th St</fullName>
                </value>
                <value>
                    <fullName>BL-Friedrichstraße 76</fullName>
                </value>
                <value>
                    <fullName>BL-Ku'damm</fullName>
                </value>
                <value>
                    <fullName>BLR-Embassy GolfLinks</fullName>
                </value>
                <value>
                    <fullName>BLR-Embassy TechVillage</fullName>
                </value>
                <value>
                    <fullName>BLR-Prestige Atlanta</fullName>
                </value>
                <value>
                    <fullName>BLR-Hebbal</fullName>
                    <label>BLR-RMZ Latitude Commercial</label>
                </value>
                <value>
                    <fullName>BLR-Salarpuria Magnificia</fullName>
                </value>
                <value>
                    <fullName>BLR-Salarpuria Symbiosis</fullName>
                </value>
                <value>
                    <fullName>BLR-Pavilion</fullName>
                    <label>BLR-The Pavilion</label>
                </value>
                <value>
                    <fullName>BL-Stralauer Allee</fullName>
                </value>
                <value>
                    <fullName>BL-Warschauer Platz 11-13</fullName>
                </value>
                <value>
                    <fullName>BOG-Calle 100 #11b-01</fullName>
                </value>
                <value>
                    <fullName>BOG-Calle 26 # 92 - 32</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Text__c</fullName>
        <label>Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Looking_For_Number_Of_Desk__c</fullName>
        <description>This field will copy the Interested in Number of Desks from Account</description>
        <formula>Account.Interested_in_Number_of_Desks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will copy the Interested in Number of Desks from Account</inlineHelpText>
        <label>Looking For Number Of Desk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Identified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows the user who identified the HQ market.</description>
        <inlineHelpText>Shows the user who identified the HQ market.</inlineHelpText>
        <label>HQ Market Identified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Identified_On__c</fullName>
        <description>Shows the date and time when HQ market is identified.</description>
        <inlineHelpText>Shows the date and time when HQ market is identified.</inlineHelpText>
        <label>HQ Market Identified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alexandria</fullName>
                </value>
                <value>
                    <fullName>Alpharetta</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Balston</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bethesda</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Brooklyn</fullName>
                </value>
                <value>
                    <fullName>Budapest</fullName>
                </value>
                <value>
                    <fullName>Buenos Aires</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Dallas - Fort Worth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Markets_Interested__c</fullName>
        <label>Markets Interested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alexandria</fullName>
                </value>
                <value>
                    <fullName>Alpharetta</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Arlington</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Balston</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Barcelona</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Bellevue</fullName>
                </value>
                <value>
                    <fullName>Belo Horizonte</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bethesda</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Bronx</fullName>
                </value>
                <value>
                    <fullName>Brooklyn</fullName>
                </value>
                <value>
                    <fullName>Brussels</fullName>
                </value>
                <value>
                    <fullName>Budapest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_recent_opportunity_stage__c</fullName>
        <label>Most recent opportunity stage</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_recent_tour_date__c</fullName>
        <description>refer JIRA ticket ST-40</description>
        <label>Most recent tour date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Move_In_Time_Frame__c</fullName>
        <description>This field will use to store if tour book from building page of the site.</description>
        <label>Move In Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NextMonth</fullName>
                    <label>Next Month</label>
                </value>
                <value>
                    <fullName>Flexible</fullName>
                </value>
                <value>
                    <fullName>This Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NMD_Followup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If contact has this field checked, someone from NMD will followup with the contact.</description>
        <label>NMD Followup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NMD_List__c</fullName>
        <description>This field is for the sample console to allow the NMD team to manage their list</description>
        <inlineHelpText>This field is for the sample console to allow the NMD team to manage their list</inlineHelpText>
        <label>NMD List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Account_Contact__c</fullName>
        <formula>Account.Named_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Named Account Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Desks_2016__c</fullName>
        <description>This is a new field to capture no of desks from website and other external systems, moving forward we will be referring this field only</description>
        <label>Number of Desks 2016</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 desk</fullName>
                </value>
                <value>
                    <fullName>2-5 desks</fullName>
                </value>
                <value>
                    <fullName>6-10 desks</fullName>
                </value>
                <value>
                    <fullName>11-20 desks</fullName>
                </value>
                <value>
                    <fullName>21-50 desks</fullName>
                </value>
                <value>
                    <fullName>51+ desks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Full_Time_Employees__c</fullName>
        <label>Number of Full Time Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Number__c</fullName>
        <label>Office Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Account__c</fullName>
        <description>This is the Id of the org for the related account of the contact.</description>
        <formula>Account.Parent_Org_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Tours_Count__c</fullName>
        <description>Total number of tours booked by the contact with status other than Scheduled or Completed</description>
        <label>Other Tours Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outreach_Stage__c</fullName>
        <label>Outreach Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Outreach</fullName>
                </value>
                <value>
                    <fullName>NMD Drip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Lead_Score__c</fullName>
        <description>Used for SFMC tracking Overall Lead Score</description>
        <label>Overall Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Type__c</fullName>
        <description>This field will contain the Account type of it's Parent account.</description>
        <formula>TEXT(Account.Account_Type__c)</formula>
        <inlineHelpText>This field will contain the Account type of it's Parent account.</inlineHelpText>
        <label>Parent Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_City__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_Country__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_PostalCode__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_State__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Mailing_Street__c</fullName>
        <description>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</description>
        <inlineHelpText>This address reflects where the Contact is based, not his/her employer's HQ Address. It is manually entered into Salesforce</inlineHelpText>
        <label>Personal Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Member__c</fullName>
        <formula>if( Billing_Account__r.Primary_Member__r.Id =  Id , "Yes","No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Office_Number__c</fullName>
        <formula>Account.Parent.Primary_Member__r.Office_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Office Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interests__c</fullName>
        <label>Product Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wework.com Membership</fullName>
                </value>
                <value>
                    <fullName>Office Space</fullName>
                </value>
                <value>
                    <fullName>Residential Space</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WeWork</fullName>
                </value>
                <value>
                    <fullName>WeLive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Membership__c</fullName>
        <label>Program Membership</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WeWork Labs</fullName>
                </value>
                <value>
                    <fullName>WeWork Labs Alumni</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Quote_Location__c</fullName>
        <externalId>true</externalId>
        <label>Quick Quote Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Enrich_Unomy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to Re-Enrich the Unomy data.</description>
        <inlineHelpText>Re-Enrichment of Unomy data.</inlineHelpText>
        <label>Re Enrich Unomy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Fail_Reason__c</fullName>
        <label>Referral Fail Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <label>Referrer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_Name__c</fullName>
        <label>Referrer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <description>Field to capture the relationship strength of the contact</description>
        <inlineHelpText>Field to capture the relationship strength of the contact</inlineHelpText>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reservable_UUID__c</fullName>
        <label>Reservable UUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservable</label>
        <referenceTo>Reservable__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reservable_of_Primary_Member__c</fullName>
        <formula>Contact__r.Opportunity__r.Reservation__r.Reservable__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservable of Primary Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restart_Journey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restart Journey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to track who has opted in for SMS communications in the China region.</description>
        <label>SMS Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation_Name__c</fullName>
        <description>Salutation used on Email Templates (Hi John Doe)</description>
        <formula>SUBSTITUTE( FirstName ,'[not provided]', '') + ' ' + SUBSTITUTE( LastName ,'[not provided]', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_In_Count__c</fullName>
        <label>Sign In Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This is the latest status coming from Space systems through Jitterbunny of the individual member. This tells us if the user is active or not.</description>
        <inlineHelpText>This is accurate status of a contact if it is an active member of our products or not.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>active</fullName>
                </value>
                <value>
                    <fullName>inactive</fullName>
                    <default>true</default>
                    <label>inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Completed_Tours__c</fullName>
        <description>Total number of tours booked by the contact with status = Completed</description>
        <label>Total Completed Tours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Events__c</fullName>
        <label>Total Events</label>
        <summaryForeignKey>Member_Event__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Tours__c</fullName>
        <formula>Total_Completed_Tours__c + Total_Scheduled_Tours__c + Other_Tours_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number Of Tours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scheduled_Tours__c</fullName>
        <description>Contains the count of tours booked for the contact with status= Scheduled.</description>
        <label>Total Scheduled Tours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ts_and_Cs_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ts and Cs Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Licensee</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Potential</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Unqualified Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unomy_Acquisitions__c</fullName>
        <label>Unomy Acquisitions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Alexa_Global_Rank__c</fullName>
        <label>Unomy Alexa Global Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Alexa_US_Rank__c</fullName>
        <label>Unomy Alexa US Rank</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Available_Contacts__c</fullName>
        <label>Unomy Available Contacts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Email__c</fullName>
        <label>Unomy Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_ID__c</fullName>
        <label>Unomy Company ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Name__c</fullName>
        <label>Unomy Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Phone__c</fullName>
        <label>Unomy Company Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size_Max__c</fullName>
        <label>Unomy Company Size Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size_Min__c</fullName>
        <label>Unomy Company Size Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Size__c</fullName>
        <label>Unomy Company Size</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Stock_Symbol__c</fullName>
        <label>Unomy Company Stock Symbol</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unomy_Company_Website__c</fullName>
        <label>Unomy Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Administration__c</fullName>
        <label>Unomy Contacts Job Administration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Consulting__c</fullName>
        <label>Unomy Contacts Job Consulting</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Creative__c</fullName>
        <label>Unomy Contacts Job Creative</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Engineering__c</fullName>
        <label>Unomy Contacts Job Engineering</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Finance__c</fullName>
        <label>Unomy Contacts Job Finance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Human_Resources__c</fullName>
        <label>Unomy Contacts Job Human Resources</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_IT__c</fullName>
        <label>Unomy Contacts Job IT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Legal__c</fullName>
        <label>Unomy Contacts Job Legal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Marketing__c</fullName>
        <label>Unomy Contacts Job Marketing</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Medical__c</fullName>
        <label>Unomy Contacts Job Medical</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Operations__c</fullName>
        <label>Unomy Contacts Job Operations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unomy_Contacts_Job_Other__c</fullName>
        <label>Unomy Contacts Job Other</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>